<resources>
    <string name="app_name">Buabap</string>

    <string name="sign_in">Iniciar Sesión</string>
    <string name="sing_up">Registrar Usuario</string>
    <string name="name">Nombre</string>
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar Contraseña</string>

    <!--Messages-->
    <string name="error_user_already_exit">El usuario ya se encuentra registrado</string>
    <string name="error_sign_up">Error al registrar el usuario</string>
    <string name="success_sign_up">Usuario registrado con éxito</string>
    <string name="error_sign_in">Usuario Inválido</string>
    <string name="success_sign_in">Inicio sesión exitoso \n%1$s \n%2$s </string>
    <string name="accept">Aceptar</string>

    <string name="error_name_invalid">Nombre Inválido</string>
    <string name="error_email_invalid">Correo Inválido</string>
    <string name="error_password_invalid">Contraseña Inválida</string>
    <string name="error_password_different">La contraseña es diferente</string>
</resources>