...
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/space_0"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_32"
        android:layout_marginVertical="@dimen/space_16"
        android:hint="@string/password"
        app:layout_constraintBottom_toTopOf="@id/confirm_sign_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_input_layout"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
...
